<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SnagTag</string>
    <string name="Venmo">Venmo</string>
    <string name="title_activity_venmo">Venmo Activity</string>
    <string name="title_activity_kinvey_activity">Kinvey Activity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_zip">ZipActivity</string>
    <string name="writeToTag">Write to NFC tag</string>
    <string name="title_activity_main">Facebook Login</string>
    <string name="title_activity_action_bar">ActionBarActivity</string>
    <string name="id">"NFC Id: "</string>
    <string name="home">Home</string>
    <string name="brand">"Brand: "</string>
    <string name="price">"Price: "</string>
    <string name="purchase">Purchase</string>
    <string name="favortieButton">Add to Favorites</string>
    <string name="title_activity_wish_list">WishListActivity</string>
    <string name="unEmail">Enter Username/Email</string>
    <string name="passworddd">Enter Password</string>
    <string name="zipLogin">Login Using SnagTag</string>
    <string name="reg">Register on SnagTag</string>
    <string name="skip">Skip</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="CVV">CVV</string>
    <string name="ExpirationYear">Expiration Year</string>
    <string name="ExpirationMonth">Expiration Month</string>
    <string name="cardNumber">Card Number</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="snapppp">Snag it!</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="Description">Description</string>
    <string name="title_activity_tag_history">TagHistoryActivity</string>
    <string name="title_activity_tags_history">TagHistoryActivity</string>
    <string name="title_activity_wishlist">WishListActivity</string>
    <string name="Basket">Basket</string>
    <string name="facebook_app_id">Facebook</string>
    <string name="History">History</string>
    <string name="Purchased">Purchased</string>
    <string name="Logout">Logout</string>
    <string name="Home">Home</string>
    <string name="title_activity_purchased">PurchasedActivity</string>
    <string name="title_activity_register_new_account">RegisterNewAccountActivity</string>

</resources>
